force-app/main/default/objects/Case/fields/Accepted_or_Declined__c.field-meta.xml
<CustomField>
    <fullName>Accepted_or_Declined__c</fullName>
    <description>Field Action : Indicates whether the portal user accepts the field action (and commits to completing the Business Reply Form) or declines the field action (in which case, it is closed).</description>
    <label>Accepted or Declined?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>