force-app/main/default/objects/Case/fields/Adverse_Event__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adverse Event</label>
    <type>Checkbox</type>
</CustomField>