force-app/main/default/objects/Case/fields/AE_Submitted__c.field-meta.xml
<CustomField>
    <fullName>AE_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AE Submitted</label>
    <type>Checkbox</type>
</CustomField>