force-app/main/default/objects/Case/fields/Article_Created__c.field-meta.xml
<CustomField>
    <fullName>Article_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Helper field for Create Article flow. Flag set to True during the Create Article flow</description>
    <inlineHelpText>Article created using the Create Article flow through the dynamic button</inlineHelpText>
    <label>Article Created</label>
    <type>Checkbox</type>
</CustomField>