force-app/main/default/objects/Case/fields/Bleeding__c.field-meta.xml
<CustomField>
    <fullName>Bleeding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bleeding</label>
    <type>Checkbox</type>
</CustomField>