force-app/main/default/objects/Case/fields/Board_Certification__c.field-meta.xml
<CustomField>
    <fullName>Board_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board Certification</label>
    <type>Checkbox</type>
</CustomField>