force-app/main/default/objects/Case/fields/Business_Reply_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Reply_Account_Number__c</fullName>
    <description>Field Action : Business Reply : The account number of the user completing the Business Reply form on the portal.</description>
    <label>BR Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>