force-app/main/default/objects/Case/fields/Business_Reply_Comments__c.field-meta.xml
<CustomField>
    <fullName>Business_Reply_Comments__c</fullName>
    <description>Field Action : Business Reply :  Any comments the portal user completing the Business Reply wants to provide to Makana Med Tech about this field action and/or their reply.</description>
    <label>BR Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>