force-app/main/default/objects/Case/fields/Business_Reply_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Reply_Date__c</fullName>
    <description>Field Action : Business Reply : When the portal user clicks the Business Reply button for a field action, this field is defaulted to the current date.  So it indicates the date that they first opened up and completed the Business Reply form.</description>
    <label>BR Date</label>
    <type>Date</type>
</CustomField>