force-app/main/default/objects/Case/fields/Business_Reply_Signed_By_User__c.field-meta.xml
<CustomField>
    <fullName>Business_Reply_Signed_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field Action : Business Reply :  The portal user who clicked on the Business Reply button for the field action and completed and signed the reply.</description>
    <label>BR Signed By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>