force-app/main/default/objects/Case/fields/Call_Back_Number__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Number__c</fullName>
    <label>Call Back Number</label>
    <type>Phone</type>
</CustomField>