force-app/main/default/objects/Case/fields/Caller__c.field-meta.xml
<CustomField>
    <fullName>Caller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caller</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Caller)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>