force-app/main/default/objects/Case/fields/Calling_About__c.field-meta.xml
<CustomField>
    <fullName>Calling_About__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calling About</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Calling About)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>