force-app/main/default/objects/Case/fields/Calling_for_Self__c.field-meta.xml
<CustomField>
    <fullName>Calling_for_Self__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calling for Self?</label>
    <type>Checkbox</type>
</CustomField>