force-app/main/default/objects/Case/fields/CAQH_ID2__c.field-meta.xml
<CustomField>
    <fullName>CAQH_ID2__c</fullName>
    <formula>Provider_Application__r.If_yes_what_is_your_CAQH_ID_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAQH ID</label>
    <type>Text</type>
</CustomField>