force-app/main/default/objects/Case/fields/CAQH_On_File__c.field-meta.xml
<CustomField>
    <fullName>CAQH_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAQH On File</label>
    <type>Checkbox</type>
</CustomField>