force-app/main/default/objects/Case/fields/Case_Owner_Check__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Check__c</fullName>
    <description>Field Action : Determines whether the current user is the case owner.</description>
    <formula>Contact.Id = $User.Id</formula>
    <label>Case Owner Check</label>
    <type>Checkbox</type>
</CustomField>