force-app/main/default/objects/Case/fields/CaseTimer19__Cumulative_Time__c.field-meta.xml
<CustomField>
    <fullName>CaseTimer19__Cumulative_Time__c</fullName>
    <label>Cumulative Time (Seconds)</label>
    <summarizedField>CaseTimer19__Session_Time__c.CaseTimer19__Duration__c</summarizedField>
    <summaryForeignKey>CaseTimer19__Session_Time__c.CaseTimer19__Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>