force-app/main/default/objects/Case/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <formula>IMAGE( URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Origin, 
&quot;Phone&quot;, &quot;015Ho000004v7pc&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Email&quot;, &quot;015Ho000004v7pd&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Chat&quot;, &quot;015Ho000004v7pe&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Website&quot;, &quot;015Ho000004v7pf&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Community&quot;, &quot;015Ho000004v7pg&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Mobile Device&quot;, &quot;015Ho000004v7ph&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Q&amp;A&quot;, &quot;015Ho000004v7pg&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Facebook&quot;, &quot;015Ho000004v7pi&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Twitter&quot;, &quot;015Ho000004v7pj&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Google&quot;, &quot;015Ho000004v7pk&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Sina Weibo&quot;, &quot;015Ho000004v7pl&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Portal&quot;, &quot;015Ho000004v7pg&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Instagram&quot;, &quot;015Ho000004v7pm&amp;oid=&quot;&amp;$Organization.Id, 
&quot;LinkedIn&quot;, &quot;015Ho000004v7pn&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Text Session&quot;, &quot;015Ho000004v7po&amp;oid=&quot;&amp;$Organization.Id, 

&quot;015Ho000004v7pc&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel</label>
    <type>Text</type>
</CustomField>