force-app/main/default/objects/Case/fields/Claim_Dispute_Category__c.field-meta.xml
<CustomField>
    <fullName>Claim_Dispute_Category__c</fullName>
    <label>Claim Dispute Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Member</fullName>
            </value>
            <value>
                <fullName>Incorrect Provider</fullName>
            </value>
            <value>
                <fullName>Coding/Bundling Edits</fullName>
            </value>
            <value>
                <fullName>Timely Filing</fullName>
            </value>
            <value>
                <fullName>Claims Reversal Needed</fullName>
            </value>
            <value>
                <fullName>Under/Overpayment</fullName>
            </value>
            <value>
                <fullName>Service is not a duplicate</fullName>
            </value>
            <value>
                <fullName>Pre-Authorization now on file</fullName>
            </value>
            <value>
                <fullName>COB - Alternate Insurance Information</fullName>
            </value>
            <value>
                <fullName>COB - Related Adjustment Primary Insurance</fullName>
            </value>
            <value>
                <fullName>COB - Retrospective Medical Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>