force-app/main/default/objects/Case/fields/Claim_Dispute_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Dispute_Type__c</fullName>
    <label>Claim Dispute Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>