force-app/main/default/objects/Case/fields/CM_Referral_Details__c.field-meta.xml
<CustomField>
    <fullName>CM_Referral_Details__c</fullName>
    <label>CM Referral Details</label>
    <type>TextArea</type>
</CustomField>