force-app/main/default/objects/Case/fields/CM_Referral_Reason__c.field-meta.xml
<CustomField>
    <fullName>CM_Referral_Reason__c</fullName>
    <label>CM Referral Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recent medical authorization</fullName>
            </value>
            <value>
                <fullName>New medical diagnosis</fullName>
            </value>
            <value>
                <fullName>Existing medical diagnosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>