force-app/main/default/objects/Case/fields/CM_Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>CM_Referral_Type__c</fullName>
    <label>CM Referral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post-discharge Care</fullName>
            </value>
            <value>
                <fullName>Medication Review</fullName>
            </value>
            <value>
                <fullName>Medication Therapy Mmgt Review</fullName>
            </value>
            <value>
                <fullName>Diabetes Education</fullName>
            </value>
            <value>
                <fullName>Medicaid LTSS</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
            <value>
                <fullName>DSNP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>