force-app/main/default/objects/Case/fields/Custom_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Custom_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Pricing</label>
    <type>Checkbox</type>
</CustomField>