force-app/main/default/objects/Case/fields/Date_Notified__c.field-meta.xml
<CustomField>
    <fullName>Date_Notified__c</fullName>
    <label>Date Notified</label>
    <type>Date</type>
</CustomField>