force-app/main/default/objects/Case/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date of Birth</label>
    <type>Checkbox</type>
</CustomField>