force-app/main/default/objects/Case/fields/Date_of_Last_Symptom__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Symptom__c</fullName>
    <label>Date of Last Symptom</label>
    <type>Date</type>
</CustomField>