force-app/main/default/objects/Case/fields/DateTime_Closed_c__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Closed_c__c</fullName>
    <inlineHelpText>Used by the Perfect Date Wizard</inlineHelpText>
    <label>DateTime Closed</label>
    <type>DateTime</type>
</CustomField>