force-app/main/default/objects/Case/fields/Days_Since_FA_Notification__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_FA_Notification__c</fullName>
    <formula>NOW() - FA_Notification_Date_Time__c</formula>
    <label>Days Since FA Notification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>