force-app/main/default/objects/Case/fields/Days_to_Acknowledge_FA__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Acknowledge_FA__c</fullName>
    <formula>IF(ISBLANK( FA_Acknowledgement_Date_Time__c ),(
NOW() - FA_Notification_Date_Time__c),( FA_Acknowledgement_Date_Time__c - FA_Notification_Date_Time__c))</formula>
    <label>Days to Acknowledge FA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>