force-app/main/default/objects/Case/fields/db_hours_FA_Notification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>db_hours_FA_Notification_Date_Time__c</fullName>
    <description>This is for the Perfect Date Wizard Tool (v2)</description>
    <label>FA_Notification_Date_Time__c db hours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>