force-app/main/default/objects/Case/fields/DEA_Certification__c.field-meta.xml
<CustomField>
    <fullName>DEA_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEA Certification</label>
    <type>Checkbox</type>
</CustomField>