force-app/main/default/objects/Case/fields/Dispute_Details_Comments__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Details_Comments__c</fullName>
    <label>Dispute Details/Comments</label>
    <type>TextArea</type>
</CustomField>