force-app/main/default/objects/Case/fields/Do_you_use_a_Digital_ID_Card__c.field-meta.xml
<CustomField>
    <fullName>Do_you_use_a_Digital_ID_Card__c</fullName>
    <label>Do you use a Digital ID Card?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>