force-app/main/default/objects/Case/fields/Dosage__c.field-meta.xml
<CustomField>
    <fullName>Dosage__c</fullName>
    <label>Dosage</label>
    <type>TextArea</type>
</CustomField>