force-app/main/default/objects/Case/fields/Drug__c.field-meta.xml
<CustomField>
    <fullName>Drug__c</fullName>
    <label>Drug</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cholecap</fullName>
            </value>
            <value>
                <fullName>Katygova</fullName>
            </value>
            <value>
                <fullName>Quattroglu</fullName>
            </value>
            <value>
                <fullName>Rofrgubu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>