force-app/main/default/objects/Case/fields/Drug_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Drug_Expiration_Date__c</fullName>
    <label>Drug Expiration Date</label>
    <type>Date</type>
</CustomField>