force-app/main/default/objects/Case/fields/Drug_Type__c.field-meta.xml
<CustomField>
    <fullName>Drug_Type__c</fullName>
    <label>Drug Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTC</fullName>
            </value>
            <value>
                <fullName>Compounded</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Biosimilar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>