force-app/main/default/objects/Case/fields/Drug_Usage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Drug_Usage_Start_Date__c</fullName>
    <label>Drug Usage Start Date</label>
    <type>Date</type>
</CustomField>