force-app/main/default/objects/Case/fields/Dry_Cough__c.field-meta.xml
<CustomField>
    <fullName>Dry_Cough__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dry Cough</label>
    <type>Checkbox</type>
</CustomField>