force-app/main/default/objects/Case/fields/Due_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Time__c</fullName>
    <description>Used to populate the deadline for for auths.</description>
    <label>Due Date/Time</label>
    <type>DateTime</type>
</CustomField>