force-app/main/default/objects/Case/fields/EHR_Medication_Code__c.field-meta.xml
<CustomField>
    <fullName>EHR_Medication_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EHR Medication Code</label>
    <referenceTo>HealthCloudGA__EhrMedicationStatement__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>