force-app/main/default/objects/Case/fields/Employee_Comments__c.field-meta.xml
<CustomField>
    <fullName>Employee_Comments__c</fullName>
    <label>Employee Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>