force-app/main/default/objects/Case/fields/Escalation_URL__c.field-meta.xml
<CustomField>
    <fullName>Escalation_URL__c</fullName>
    <description>Part of the Escalation URL package. Alena Abrosimova</description>
    <label>Escalation URL</label>
    <type>Url</type>
</CustomField>