force-app/main/default/objects/Case/fields/Exception1__c.field-meta.xml
<CustomField>
    <fullName>Exception1__c</fullName>
    <label>Exception1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>