force-app/main/default/objects/Case/fields/Exception2__c.field-meta.xml
<CustomField>
    <fullName>Exception2__c</fullName>
    <label>Exception2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>