force-app/main/default/objects/Case/fields/Exception3__c.field-meta.xml
<CustomField>
    <fullName>Exception3__c</fullName>
    <label>Exception3</label>
    <length>25</length>
    <type>Text</type>
</CustomField>