force-app/main/default/objects/Case/fields/Experiencing_Chest_Pain__c.field-meta.xml
<CustomField>
    <fullName>Experiencing_Chest_Pain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experiencing Chest Pain</label>
    <type>Checkbox</type>
</CustomField>