force-app/main/default/objects/Case/fields/FA_Acknowledged_By__c.field-meta.xml
<CustomField>
    <fullName>FA_Acknowledged_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field Action : The portal user who accepted or declined the field action.</description>
    <label>Acknowledged By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FA_Cases_Acknowledged</relationshipName>
    <type>Lookup</type>
</CustomField>