force-app/main/default/objects/Case/fields/FA_Acknowledgement_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FA_Acknowledgement_Date_Time__c</fullName>
    <description>Field Action : The date/time that the portal user clicked on the Acknowledge button for a Field Action.  (Clicking this button then prompts them to accept or decline the field action.)</description>
    <inlineHelpText>The date/time that the portal user clicked on the Acknowledge button for this Field Action.</inlineHelpText>
    <label>Acknowledged Date</label>
    <type>DateTime</type>
</CustomField>