force-app/main/default/objects/Case/fields/FA_Business_Reply_Signed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FA_Business_Reply_Signed_Date_Time__c</fullName>
    <description>Field Action : Business Reply : The date/time that the portal user signed the Business Reply form for this Field Action.</description>
    <label>BR Signed Date</label>
    <type>DateTime</type>
</CustomField>