force-app/main/default/objects/Case/fields/FA_Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>FA_Declined_Reason__c</fullName>
    <description>Field Action : If, during the Acknowledge process, the portal user declines the field action, they are required to enter a reason why and that is stored in this field.</description>
    <label>Declined Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>