force-app/main/default/objects/Case/fields/FA_Letter__c.field-meta.xml
<CustomField>
    <fullName>FA_Letter__c</fullName>
    <description>Field Action : Stores the id of the .pdf file on the parent Field Action. This file is the letter associated with the field action and is populated in this field so that the letter can be previewed in a flow (both on the portal and in the Service Console Case).</description>
    <label>FA Letter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>