force-app/main/default/objects/Case/fields/FA_Letter_Approved_or_Declined_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FA_Letter_Approved_or_Declined_Date_Time__c</fullName>
    <description>Field Action : Date/Time that the portal user accepted or declined the Field Action.</description>
    <label>Accepted or Declined Date</label>
    <type>DateTime</type>
</CustomField>