force-app/main/default/objects/Case/fields/FA_Nickname__c.field-meta.xml
<CustomField>
    <fullName>FA_Nickname__c</fullName>
    <description>Field Action : This is a lookup to the Nickname field on the parent Field Action.  It provides an abbreviated name for the Field Action.</description>
    <formula>Field_Action__r.Field_Action_Nickname__c</formula>
    <label>FA Nickname</label>
    <type>Text</type>
</CustomField>