force-app/main/default/objects/Case/fields/FA_Notification_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>FA_Notification_Date_Text__c</fullName>
    <description>Field Action : Renders the notification date/time in a text format (e.g. January 1).</description>
    <formula>CASE(MONTH(DATEVALUE(FA_Notification_Date_Time__c)),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;) &amp; &quot; &quot; &amp; TEXT(Year(DATEVALUE(FA_Notification_Date_Time__c)))</formula>
    <label>FA Notification Date (Text)</label>
    <type>Text</type>
</CustomField>