force-app/main/default/objects/Case/fields/FA_Notification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FA_Notification_Date_Time__c</fullName>
    <description>Field Action : The date/time that the initial notification about the field action was sent to the contact listed on the Field Action Case.  This represents when they were officially notified and would be populated by Marketing Cloud.</description>
    <inlineHelpText>Date/Time that the field action notification was sent.</inlineHelpText>
    <label>Notification Sent</label>
    <type>DateTime</type>
</CustomField>