force-app/main/default/objects/Case/fields/FA_Stage__c.field-meta.xml
<CustomField>
    <fullName>FA_Stage__c</fullName>
    <description>Field Action : Represents the current stage of the field action letter (case).</description>
    <label>FA Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>