force-app/main/default/objects/Case/fields/Fever__c.field-meta.xml
<CustomField>
    <fullName>Fever__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fever</label>
    <type>Checkbox</type>
</CustomField>