force-app/main/default/objects/Case/fields/Field_Action__c.field-meta.xml
<CustomField>
    <fullName>Field_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field Action : The parent field action for which this case was created.  The case represents a notification to a customer of that field action and replaces the paper letter that would traditionally have been sent to them via FedEx or snail mail.</description>
    <label>Field Action</label>
    <referenceTo>Field_Action__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>