force-app/main/default/objects/Case/fields/Field_Action_Title__c.field-meta.xml
<CustomField>
    <fullName>Field_Action_Title__c</fullName>
    <description>Field Action : This is the title of the parent Field Action.</description>
    <formula>Field_Action__r.Title__c</formula>
    <label>Field Action Title</label>
    <type>Text</type>
</CustomField>