force-app/main/default/objects/Case/fields/Has_Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Has_Parent_Case__c</fullName>
    <formula>ParentId != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Parent Case</label>
    <type>Checkbox</type>
</CustomField>