force-app/main/default/objects/Case/fields/Health_Insurance_Claim__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Health Insurance Claim</label>
    <referenceTo>Health_Insurance_Claim__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>