force-app/main/default/objects/Case/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field Action : The field action is related to both an Account and a Hospital (which you could make more generic as &quot;Healthcare Facility&quot;).  The Account can be a health system or a 3rd party that manages field actions for multiple facilities.  The Hospital represents the facility that received the product involved in the field action.</description>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FA Cases (Hospital)</relationshipLabel>
    <relationshipName>FA_Cases_Hospital</relationshipName>
    <type>Lookup</type>
</CustomField>